--- a/super_smash_bolt_ultimate/client/.godot/editor/script_editor_cache.cfg
+++ b/super_smash_bolt_ultimate/client/.godot/editor/script_editor_cache.cfg
@@ -84,8 +84,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 25,
-"scroll_position": 25.0,
+"row": 27,
+"scroll_position": 27.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -112,8 +112,36 @@ state={
 "column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 53,
-"scroll_position": 43.0,
+"row": 52,
+"scroll_position": 52.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://ai/tasks/move_to_target.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
+"scroll_position": 11.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://ai/tasks/bt_probability.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 15,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
