--- a/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
+++ b/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
@@ -9,40 +9,36 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=482
-dock_hsplit_3=-694
+dock_hsplit_2=540
+dock_hsplit_3=-432
 dock_hsplit_4=0
-dock_filesystem_h_split_offset=240
+dock_filesystem_h_split_offset=480
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-<<<<<<< HEAD
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
-=======
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/main_menu.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/obstacles/", "res://main/", "res://assets/sprites/sprite_sheets/")
->>>>>>> origin/spectator-exit
+<<<<<<<HEADdock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/icons/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/end_pop_up.tscn")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main/main.tscn", "res://scenes/spectator_overlay.tscn", "res://scenes/pause_menu.tscn", "res://scenes/game_scene.tscn", "res://scenes/end_pop_up.tscn", "res://scenes/in_lobby_menu.tscn", "res://scenes/killzone.tscn", "res://scenes/lobby_menu.tscn", "res://scenes/main_menu.tscn")
-current_scene="res://scenes/main_menu.tscn"
-center_split_offset=-491
-selected_default_debugger_tab_idx=0
+open_scenes=PackedStringArray("res://main/main.tscn", "res://scenes/spectator_overlay.tscn", "res://scenes/end_pop_up.tscn")
+current_scene="res://scenes/end_pop_up.tscn"
+center_split_offset=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/chunk.gd", "res://scripts/death_wall.gd", "res://scripts/end_game_pop_up.gd", "res://scripts/game_scene.gd", "res://scripts/player_character.gd", "res://scripts/powerups/powerup_spawner.gd", "res://scripts/transient_platform.gd", "res://scripts/transient_wall.gd"]
-selected_script="res://scripts/end_game_pop_up.gd"
-open_help=["@GDScript", "Node"]
-script_split_offset=70
+open_scripts=["res://scripts/end_game_pop_up.gd", "res://scripts/player_character.gd"]
+selected_script="res://scripts/player_character.gd"
+open_help=[]
+script_split_offset=140
 list_split_offset=0
 zoom_factor=1.0
 
