--- a/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
+++ b/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/player_character.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scenes/", "res://demo/", "res://demo/agents/", "res://demo/agents/player/", "res://assets/", "res://assets/sprites/", "res://assets/sprites/sprite_sheets/", "res://assets/ParallaxBackground/", "res://addons/", "res://addons/limboai/", "res://addons/limboai/icons/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/level.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -30,12 +30,12 @@ current_scene="res://scenes/flying_enemy.tscn"
 center_split_offset=-491
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://scripts/main_menu.gd"]
+selected_script="res://scripts/main_menu.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
